force-app/main/default/objects/LogitEntry__c/LogitEntry__c.object-meta.xml
<CustomObject>
    <label>LogitEntry</label>
    <nameField>
        <label>LogEntry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LogitEntries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>