force-app/main/default/objects/LogitEntry__c/fields/Message2__c.field-meta.xml
<CustomField>
    <fullName>Message2__c</fullName>
    <label>Message2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>