force-app/main/default/objects/LogitEntry__c/fields/Message3__c.field-meta.xml
<CustomField>
    <fullName>Message3__c</fullName>
    <label>Message3</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>